refactor: removed mongodb and instead using postgres for everything to reduce unnecessary complexity and overhead